# Smart-AutoClicker

./: .gitattributes  .gitignore  CODE_WIKI.md  LICENSE  README.md  build-Klickr-fDroid-release-signed.ps1  build.gradle  build.gradle.kts  builder.config.json  gradle.properties  gradlew.bat  local.properties  settings.gradle  settings.gradle.kts
.github/: pull_request_template.md
backup/: build.gradle
base-ui/: build.gradle
billing/: build.gradle
build-logic/: settings.gradle.kts
buildSrc/: build.gradle.kts
core/: build.gradle
core-capture/: build.gradle
core-detection/: build.gradle
core-domain/: build.gradle
core-processing/: build.gradle
core-ui/: build.gradle
core/smart/detection/src/: CMakeLists.txt
core/smart/detection/src/androidTest/java/com/buzbuz/smartautoclicker/core/detection/: DetectionTests.kt  ImageDetectorTests.kt  PerformancesTests.kt  TemplateMatcherTests.kt
core/smart/detection/src/androidTest/java/com/buzbuz/smartautoclicker/core/detection/data/: ActualDetectionResults.kt  DetectionResolution.kt  ExpectedDetectionResults.kt  TestDetectionArea.kt  TestDetectionResolution.kt  TestImages.kt  TestResults.kt
core/smart/detection/src/androidTest/java/com/buzbuz/smartautoclicker/core/detection/utils/: Constants.kt  Extensions.kt
core/smart/detection/src/androidTest/res/raw/: condition_1
core/smart/detection/src/debug/ncnn/include/: platform.h
core/smart/detection/src/debug/tesseract4android/include/tesseract/: version.h
core/smart/detection/src/main/assets/models/: ch_PP_OCRv4_rec.ncnn.param  det.ncnn.param  rec.ncnn.param
core/smart/detection/src/main/cpp/: detector.cpp  detector.hpp  smartautoclicker.cpp
core/smart/detection/src/main/cpp/detection/: detection_image.cpp  detection_image.hpp  detector.cpp  detector.hpp  matching_results.cpp  matching_results.hpp
core/smart/detection/src/main/cpp/detector/: detection_result.cpp  detection_result.hpp  detector.cpp  detector.hpp
core/smart/detection/src/main/cpp/detector/images/: condition_image.cpp  condition_image.hpp  detection_image.cpp  detection_image.hpp  screen_image.cpp  screen_image.hpp
core/smart/detection/src/main/cpp/detector/matching/: template_matcher.cpp  template_matcher.hpp  template_matching_result.cpp  template_matching_result.hpp
core/smart/detection/src/main/cpp/detector/matching/color/: color_matcher.cpp  color_matcher.hpp  color_matching_result.cpp  color_matching_result.hpp
core/smart/detection/src/main/cpp/detector/matching/template/: template_matcher.cpp  template_matcher.hpp  template_matching_result.cpp  template_matching_result.hpp
core/smart/detection/src/main/cpp/detector/matching/text/: text_matcher.cpp  text_matcher.hpp  text_matcher_debugger.hpp  text_matching_result.cpp  text_matching_result.hpp
core/smart/detection/src/main/cpp/detector/matching/text/detection/: text_detector.cpp  text_detector.hpp  text_detector_result.hpp
core/smart/detection/src/main/cpp/detector/matching/text/recognition/: alphabet_recognizer.cpp  alphabet_recognizer.hpp  text_recognizer.cpp  text_recognizer.hpp  text_recognizer_result.hpp
core/smart/detection/src/main/cpp/detector/ocr/: ocr_result.cpp  ocr_result.hpp  text_matcher.cpp  text_matcher.hpp
core/smart/detection/src/main/cpp/images/: condition_image.cpp  condition_image.hpp  detection_image.cpp  detection_image.hpp  screen_image.cpp  screen_image.hpp
core/smart/detection/src/main/cpp/jni/: jni.hpp  jni_bitmap.cpp  jni_detection_result.cpp  jni_detector.cpp  jni_helper.h  jni_java_wrapper.hpp  jni_string_array.cpp
core/smart/detection/src/main/cpp/logs/: log.cpp  log.h
core/smart/detection/src/main/cpp/matching/: template_matcher.cpp  template_matcher.hpp  template_matching_result.cpp  template_matching_result.hpp
core/smart/detection/src/main/cpp/scaling/: scalable_roi.cpp  scalable_roi.hpp  scaling.hpp
core/smart/detection/src/main/cpp/types/: detectionResult.hpp  detection_result.cpp  detection_result.hpp  scalable_roi.cpp  scalable_roi.hpp
core/smart/detection/src/main/cpp/utils/: correction.hpp  roi.h  roi.hpp  scalable_roi.cpp  scalable_roi.hpp  scaling.cpp  scaling.hpp
core/smart/detection/src/main/java/com/buzbuz/smartautoclicker/core/detection/: DetectionResult.kt  ImageDetector.kt  NativeDetector.kt  ScreenDetector.kt
database/: build.gradle
detection/: .gitignore  build.gradle  fetchSources.gradle
detection/src/: CMakeLists.txt
detection/src/debug/java/com/buzbuz/smartautoclicker/testing/: OpenClass.kt
detection/src/debug/opencv/include/opencv2/: opencv_modules.hpp
detection/src/main/: AndroidManifest.xml
detection/src/main/cpp/: CMakeLists.txt  detector.cpp  detector.hpp  smartautoclicker.cpp
detection/src/main/java/com/buzbuz/smartautoclicker/detection/: ActionExecutor.kt  Cache.kt  ConditionDetector.kt  DetectorEngine.kt  ImageDetector.kt  NativeDetector.kt  ScenarioProcessor.kt  ScreenDetector.kt  ScreenRecorder.kt
detection/src/release/java/com/buzbuz/smartautoclicker/testing/: OpenClass.kt
detection/src/test/java/com/buzbuz/smartautoclicker/detection/: ActionExecutorTests.kt  CacheTests.kt  ConditionDetectorTests.kt  DetectorEngineTests.kt  ScenarioProcessorTests.kt  ScenarioRecorderTests.kt  ScreenDetectorTests.kt  ScreenRecorderTests.kt
detection/src/test/java/com/buzbuz/smartautoclicker/detection/shadows/: ShadowBitmapCreator.java  ShadowImageReader.java
detection/src/test/java/com/buzbuz/smartautoclicker/detection/utils/: Extensions.kt  Matchers.kt  ProcessingData.kt  ShadowImageReader.java
domain/: build.gradle
engine/: build.gradle
extensions/: build.gradle
feature-backup/: build.gradle
feature-billing/: build.gradle
feature-floating-menu/: build.gradle
feature-scenario-config/: build.gradle
feature-scenario-debugging/: build.gradle
gradle/: libs.versions.toml
opencv/: .gitignore  build.gradle  fetchSources.gradle
opencv/src/main/cpp/: CMakeLists.txt  detector.cpp  detector.hpp  smartautoclicker.cpp
smartautoclicker/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
(+3868 files in other folders)
